--- a/app/src/main/res/drawable/edittext_rounded_corner_rectangle.xml
+++ b/app/src/main/res/drawable/edittext_rounded_corner_rectangle.xml
@@ -18,7 +18,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="#EEEEEE" />
+                android:color="#B6B6B6" />
             <corners android:radius="4dp"/>
             <solid
                 android:color="#FFFFFF" />
