--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,24 +41,72 @@
         android:layout_height="wrap_content"
         android:text="아이디저장"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인"
-        android:textAlignment="center"/>
-    <EditText
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:background="@drawable/loginbutton_stroke_rounded_corner"
+        android:textColor="#39F077"
+        android:textSize="18dp"
+        android:text="로그인" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="카카오계정 로그인"
-        android:textAlignment="center"/>
+        android:layout_marginTop="15dp"
+        android:textAlignment="center"
+        android:drawableLeft="@drawable/kakao_logo"
+        android:paddingHorizontal="100dp"
+        android:background="@drawable/loginbutton_stroke_rounded_corner_kakao"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:text="카카오계정 로그인"/>
 
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingTop="30dp">
 
+    <androidx.appcompat.widget.AppCompatButton
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        android:background="@drawable/loginbutton_bottom_invisible"
+    android:layout_weight="1"
+    android:textSize="13dp"
+    android:text="아이디 찾기"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="|"
+        android:textSize="18dp"
+        android:layout_marginHorizontal="5dp"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/loginbutton_bottom_invisible"
+        android:layout_weight="1"
+        android:textSize="13dp"
+        android:text="비밀번호 찾기"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="|"
+        android:textSize="18dp"
+        android:layout_marginHorizontal="5dp"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/loginbutton_bottom_invisible"
+        android:layout_weight="1"
+        android:textSize="13dp"
+        android:text="회원가입"/>
 
 
 </LinearLayout>
