--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,14 @@
 
 
     <EditText
+        android:id="@+id/idContent"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/edittext_rounded_corner_rectangle"
         android:hint="  아이디"/>
 
     <EditText
+        android:id="@+id/pwContent"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/edittext_rounded_corner_rectangle"
@@ -43,6 +45,7 @@
         android:text="아이디저장"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/loginBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
